@@ -351,6 +351,9 @@ struct mapent *cache_lookup(struct mapent_cache *mc, const char *key)
 {
 	struct mapent *me = NULL;
 
+	if (!me)
+		return NULL;
+
 	for (me = mc->hash[hash(key)]; me != NULL; me = me->next) {
 		if (strcmp(key, me->key) == 0)
 			goto done;
@@ -376,6 +379,9 @@ done:
 struct mapent *cache_lookup_distinct(struct mapent_cache *mc, const char *key)
 {
 	struct mapent *me;
+
+	if (!me)
+		return NULL;
 
 	for (me = mc->hash[hash(key)]; me != NULL; me = me->next) {
 		if (strcmp(key, me->key) == 0)
